# orchy

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  TOOLS.md  compose.yml  config.toml  runner.toml.example
crates/orchy-application/: Cargo.toml
crates/orchy-application/src/: add_api_key.rs  add_dependency.rs  add_edge.rs  add_knowledge_ref.rs  add_task_note.rs  add_task_ref.rs  append_knowledge.rs  archive_knowledge.rs  archive_task.rs  assemble_context.rs  assign_task.rs  bootstrap_admin.rs  cancel_task.rs  change_knowledge_kind.rs  change_password.rs  change_roles.rs  check_lock.rs  check_mailbox.rs  check_sent_messages.rs  check_timed_out_agents.rs  claim_message.rs  claim_task.rs  complete_task.rs  consolidate_knowledge.rs  create_organization.rs  decode_token.rs  delegate_task.rs  delete_knowledge.rs  disconnect_agent.rs  dto.rs  fail_task.rs  generate_api_key.rs  get_agent.rs  get_agent_summary.rs  get_current_user.rs  get_graph.rs  get_neighbors.rs  get_next_task.rs  get_organization.rs  get_project.rs  (+73 more)
crates/orchy-cli/: Cargo.toml
crates/orchy-cli/src/: client.rs  config.rs  lib.rs  main.rs  output.rs
crates/orchy-cli/src/cmd/: agent.rs  bootstrap.rs  edge.rs  event.rs  knowledge.rs  lock.rs  message.rs  mod.rs  org.rs  project.rs  task.rs
crates/orchy-core/: Cargo.toml
crates/orchy-core/src/: api_key.rs  error.rs  lib.rs  namespace.rs  note.rs  pagination.rs  resource_ref.rs  search.rs  store.rs
crates/orchy-core/src/agent/: alias.rs  events.rs  mod.rs  service.rs
crates/orchy-core/src/api_key/: mod.rs
crates/orchy-core/src/document/: events.rs  mod.rs  service.rs
crates/orchy-core/src/domain/: mod.rs  skill.rs  task.rs
crates/orchy-core/src/edge/: mod.rs
crates/orchy-core/src/embeddings/: mod.rs  openai.rs  search.rs
crates/orchy-core/src/entities/: agent.rs  context.rs  memory_entry.rs  message.rs  mod.rs  skill.rs  task.rs
crates/orchy-core/src/graph/: events.rs  mod.rs  neighborhood.rs  relation_options.rs  rules.rs
crates/orchy-core/src/infrastructure/: mock_store.rs  mod.rs
crates/orchy-core/src/knowledge/: events.rs  mod.rs  path.rs  service.rs
crates/orchy-core/src/memory/: events.rs  mod.rs  service.rs
crates/orchy-core/src/message/: events.rs  mod.rs  service.rs
crates/orchy-core/src/organization/: api_key.rs  events.rs  mod.rs  service.rs
crates/orchy-core/src/project/: events.rs  mod.rs  service.rs
crates/orchy-core/src/project_link/: events.rs  mod.rs  service.rs
crates/orchy-core/src/resource_lock/: events.rs  mod.rs  service.rs
crates/orchy-core/src/services/: agent_service.rs  context_service.rs  memory_service.rs  message_service.rs  mod.rs  skill_service.rs  task_service.rs
crates/orchy-core/src/skill/: aggregate.rs  events.rs  mod.rs  service.rs
crates/orchy-core/src/store/: agent_store.rs  context_store.rs  memory_store.rs  message_store.rs  mock.rs  mod.rs  skill_store.rs  task_store.rs
crates/orchy-core/src/task/: aggregate.rs  events.rs  mod.rs  service.rs
crates/orchy-core/src/user/: email.rs  events.rs  id.rs  membership.rs  mod.rs  role.rs
crates/orchy-core/src/value_objects/: agent_status.rs  ids.rs  message_target.rs  mod.rs  namespace.rs  priority.rs  project.rs  task_status.rs  version.rs
crates/orchy-events/: Cargo.toml
crates/orchy-runner/: Cargo.toml
crates/orchy-runner/examples/: pipe_test.rs  pty_interactive.rs  pty_test.rs
crates/orchy-runner/src/: config.rs  driver.rs  error.rs  input.rs  lib.rs  main.rs  mcp_config.rs  output.rs  process.rs  session.rs
crates/orchy-server/: Cargo.toml
crates/orchy-server/src/: api.rs  bootstrap.rs  config.rs  container.rs  embeddings.rs  event_query.rs  heartbeat.rs  lib.rs  main.rs  skill_loader.rs  store.rs
crates/orchy-server/src/api/: agents.rs  auth.rs  events.rs  graph.rs  knowledge.rs  locks.rs  messages.rs  mod.rs  orgs.rs  projects.rs  reviews.rs  tasks.rs  user_auth.rs
crates/orchy-server/src/api/middleware/: cookie_auth.rs  mod.rs
crates/orchy-server/src/auth/: api_key.rs  cookie.rs  mod.rs  password.rs  token.rs
crates/orchy-server/src/mcp/: handler.rs  mod.rs  params.rs  schema_compat.rs  tools.rs
crates/orchy-server/src/mcp/tools/: agent.rs  edge.rs  knowledge.rs  message.rs  mod.rs  project.rs  task.rs
crates/orchy-server/tests/: integration.rs
crates/orchy-store-memory/: Cargo.toml
crates/orchy-store-memory/src/: agent.rs  api_key.rs  context.rs  document.rs  edge.rs  events.rs  knowledge.rs  lib.rs  membership.rs  memory.rs  message.rs  namespace.rs  organization.rs  project.rs  project_link.rs  resource_lock.rs  review.rs  skill.rs  store_impl.rs  task.rs  user.rs  user_stores.rs  watcher.rs
crates/orchy-store-memory/tests/: integration.rs
crates/orchy-store-pg/: Cargo.toml
crates/orchy-store-pg/src/: agent.rs  api_key.rs  consumer.rs  context.rs  document.rs  edge.rs  events.rs  knowledge.rs  lib.rs  memory.rs  message.rs  namespace.rs  organization.rs  project.rs  project_link.rs  resource_lock.rs  review.rs  skill.rs  store_impl.rs  subscriber.rs  task.rs  user.rs  watcher.rs
crates/orchy-store-pg/tests/: integration.rs
crates/orchy-store-sqlite/: Cargo.toml
crates/orchy-store-sqlite/src/: agent.rs  api_key.rs  context.rs  document.rs  edge.rs  events.rs  knowledge.rs  lib.rs  membership.rs  memory.rs  message.rs  namespace.rs  organization.rs  project.rs  project_link.rs  resource_lock.rs  review.rs  skill.rs  store_impl.rs  task.rs  user.rs  watcher.rs
crates/orchy-store-sqlite/tests/: integration.rs
crates/orchy-swarm/: Cargo.toml
crates/orchy-swarm/src/: agent_tab.rs  app.rs  client.rs  config.rs  main.rs  tui.rs
crates/orchy-swarm/src/ui/: content.rs  mod.rs  modal.rs  statusbar.rs  tabs.rs
dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.json
dashboard/src/: main.tsx
migrations/: manual_sqlite_migration.sql
migrations/postgres/: 001_initial_schema.sql  20260412-160000_initial_schema.sql  20260412-235000_notes_projects_reconnect.sql  20260413-000000_project_links.sql  20260413-010000_message_reply_to.sql  (+32 more)
(+92 files in other folders)
