[workspace]
resolver = "2"
members = [
    "crates/orchy-core",
    "crates/orchy-store-memory",
    "crates/orchy-store-sqlite",
    "crates/orchy-store-pg",
    "crates/orchy-server",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Domain
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.8"

# MCP
rmcp = { version = "1.4", features = ["server", "macros", "transport-streamable-http-server"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled-full"] }
sqlite-vec = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Config
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal
orchy-core = { path = "crates/orchy-core" }
orchy-store-memory = { path = "crates/orchy-store-memory" }
orchy-store-sqlite = { path = "crates/orchy-store-sqlite" }
orchy-store-pg = { path = "crates/orchy-store-pg" }
