[package]
name = "orchy-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "orchy"
path = "src/main.rs"

[dependencies]
orchy-application = { path = "../orchy-application" }
orchy-core = { path = "../orchy-core" }
clap = { version = "4", features = ["derive"] }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = "6"
chrono = { workspace = true }