[package]
name = "orchy-core"
edition.workspace = true
version.workspace = true

[dependencies]
orchy-events.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
