[package]
name = "orchy-runner"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "orchy-runner"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }

pty-process = { version = "0.5", features = ["async"] }
strip-ansi-escapes = "0.2"
rmcp = { version = "1.4", features = ["client", "transport-streamable-http-client-reqwest"] }
