[package]
name = "orchy-server"
edition.workspace = true
version.workspace = true

[dependencies]
orchy-core.workspace = true
orchy-store-memory.workspace = true
orchy-store-sqlite.workspace = true
orchy-store-pg.workspace = true
tokio.workspace = true
axum.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
