[package]
name = "orchy-server"
edition.workspace = true
version.workspace = true

[dependencies]
orchy-core.workspace = true
orchy-events.workspace = true
orchy-application.workspace = true
orchy-store-memory.workspace = true
orchy-store-sqlite.workspace = true
orchy-store-pg.workspace = true
tokio.workspace = true
axum.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
uuid.workspace = true
async-trait = "0.1"
http = "1"
jsonwebtoken = "9"
bcrypt = "0.17"
tower-cookies = "0.11"
rsa = "0.9"
pkcs8 = { version = "0.10", features = ["pem"] }
rand = "0.8"
