[package]
name = "orchy-store-memory"
edition.workspace = true
version.workspace = true

[dependencies]
orchy-core.workspace = true
orchy-events.workspace = true
async-trait = "0.1"
serde.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
tracing.workspace = true
