[package]
name = "orchy-store-pg"
edition.workspace = true
version.workspace = true

[dependencies]
orchy-core.workspace = true
orchy-events.workspace = true
sqlx.workspace = true
pgvector.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
tracing.workspace = true
