[package]
name = "orchy-store-pg"
edition.workspace = true
version.workspace = true

[dependencies]
orchy-core.workspace = true
orchy-events.workspace = true
async-trait = "0.1"
sqlx.workspace = true
pgvector.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
tokio.workspace = true
futures = "0.3"
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
