[package]
name = "orchy-store-sqlite"
edition.workspace = true
version.workspace = true

[dependencies]
orchy-core.workspace = true
rusqlite.workspace = true
sqlite-vec.workspace = true
sea-query.workspace = true
sea-query-rusqlite.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
tracing.workspace = true
