[package]
name = "orchy-store-sqlite"
edition.workspace = true
version.workspace = true

[dependencies]
orchy-core.workspace = true
orchy-events.workspace = true
async-trait = "0.1"
rusqlite.workspace = true
sqlite-vec.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
